--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#34c234" />
-    <meta
-      name="description"
-      content="En enkel applikation för att generera spelscheman, laguppdelningar och kioskscheman."
-    />
-
+    <meta name="description" content="En enkel applikation för att generera spelscheman, laguppdelningar och kioskscheman." />
     <title>Poolspelsverktyget</title>
 
     <!-- Manifest -->
