--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <title>Poolspelsverktyget</title>
 
     <!-- Manifest -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
     <!-- Ikoner -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/icons/icon-512.png" />
-    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/icons/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/icons/icon-512.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192.png" />
   </head>
   <body>
     <noscript>Du måste ha JavaScript aktiverat för att denna applikation ska fungera.</noscript>
@@ -21,11 +21,11 @@
 
     <!-- Registrera Service Worker -->
     <script>
-      if ("serviceWorker" in navigator) {
+      if ('serviceWorker' in navigator) {
         navigator.serviceWorker
-          .register("/sw.js")
+          .register(`${process.env.PUBLIC_URL}/sw.js`)
           .then(() => console.log("Service Worker registrerad!"))
-          .catch((err) => console.error("SW-fel:", err));
+          .catch(err => console.error("SW-fel:", err));
       }
     </script>
   </body>
